--- a/src/components/ContactList/ContactItem/ContactItem.module.css
+++ b/src/components/ContactList/ContactItem/ContactItem.module.css
@@ -4,7 +4,7 @@
 
 .btn {
   border: none;
-  background-color: #a07575;
+  background-color: red;
   padding: 5px 10px;
   color: white;
   border-radius: 2px;
